@@ -15,7 +15,7 @@ menu ADD "GatoScript/-"
 
 menu ADD "GatoScript/Descargas"
 menu ADD "GatoScript/Descargas/aMule" "amule"
-menu -e0 ADD "GatoScript/Descargas/Azureus" "Azureus"
+menu ADD "GatoScript/Descargas/Azureus" "azureus"
 
 menu ADD "GatoScript/-"
 
